--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "webpack",
   "private": true,
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "bundle": "webpack"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Diweikang/webpack_learn.git"
