--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/Diweikang/webpack_learn#readme",
   "devDependencies": {
+    "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
+    "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
