--- a/package.json
+++ b/package.json
@@ -18,13 +18,22 @@
   },
   "homepage": "https://github.com/Diweikang/webpack_learn#readme",
   "devDependencies": {
+    "autoprefixer": "^9.8.4",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "webpack": "^4.43.0"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
