--- a/2.webpack核心概念/2.5.devServer的配置/demo/package.json
+++ b/2.webpack核心概念/2.5.devServer的配置/demo/package.json
@@ -1,12 +1,20 @@
 {
   "scripts": {
     "bundle": "webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server",
+    "server": "node server.js"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.6.0",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^4.3.0",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.11.0"
   }
 }
