--- a/2.webpack核心概念/2.6.babel的配置/demo/package.json
+++ b/2.webpack核心概念/2.6.babel的配置/demo/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
@@ -15,5 +16,9 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.10.4",
+    "@babel/runtime-corejs2": "^7.10.4"
   }
 }
