--- a/3.webpack高级概念/3.2.webpack之mode/demo/package.json
+++ b/3.webpack高级概念/3.2.webpack之mode/demo/package.json
@@ -1,16 +1,19 @@
 {
   "scripts": {
     "bundle": "webpack",
-    "start": "webpack-dev-server"
+    "dev": "webpack-dev-server --config ./build/webpack.dev.config.js",
+    "build": "webpack --config ./build/webpack.prod.config.js"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.6.5",
     "html-webpack-plugin": "^4.3.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.0.8"
   }
 }
