--- a/3.webpack高级概念/3.3.webpack之codeSplitting/demo/package.json
+++ b/3.webpack高级概念/3.3.webpack之codeSplitting/demo/package.json
@@ -11,6 +11,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.5",
     "html-webpack-plugin": "^4.3.0",
+    "lodash": "^4.17.16",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
