--- a/3.webpack高级概念/3.3.webpack之codeSplitting/demo/package.json
+++ b/3.webpack高级概念/3.3.webpack之codeSplitting/demo/package.json
@@ -8,6 +8,7 @@
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.5",
     "html-webpack-plugin": "^4.3.0",
