--- a/3.webpack高级概念/3.4.SplitChunksPlugin配置参数/demo/package.json
+++ b/3.webpack高级概念/3.4.SplitChunksPlugin配置参数/demo/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "bundle": "webpack --config ./build/webpack.prod.config",
+    "bundle": "webpack --config ./build/webpack.dev.config",
     "dev": "webpack-dev-server --config ./build/webpack.dev.config",
     "build": "webpack --config ./build/webpack.prod.config"
   },
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "html-webpack-plugin": "^4.3.0",
     "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
