--- a/3.webpack高级概念/3.5.webpack之打包分析/demo/package.json
+++ b/3.webpack高级概念/3.5.webpack之打包分析/demo/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.0.9"
