--- a/3.webpack高级概念/3.7.浏览器缓存/demo/package.json
+++ b/3.webpack高级概念/3.7.浏览器缓存/demo/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "css-loader": "^3.6.0",
     "html-webpack-plugin": "^4.3.0",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.19",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
