webpack中的环境变量

--- a/3.webpack高级概念/3.7.浏览器缓存/demo/package.json
+++ b/3.webpack高级概念/3.7.浏览器缓存/demo/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "bundle": "webpack --config ./build/webpack.dev.config",
-    "dev": "webpack-dev-server --config ./build/webpack.dev.config",
-    "build": "webpack --config ./build/webpack.prod.config"
+    "bundle": "webpack --config ./build/webpack.common.config",
+    "dev": "webpack-dev-server --config ./build/webpack.common.config",
+    "build": "webpack --env.production --config ./build/webpack.common.config"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
